deleted the padding bottom for the checkbox input field in the 320 media and kept the padding top to prevent the shift in the buttons when clicked upon.

--- a/css/grey_Poupon.css
+++ b/css/grey_Poupon.css
@@ -467,7 +467,7 @@
 				 float: left;
 				
 				padding-top:5px;
-				padding-bottom: 2px;
+				
                  line-height: 1.4em;
 				 margin-right:6px;
 				 margin-left: 6px;
